5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1723_2507.log
== SUBMITION (2019-05-09 11:04:13) 
-- CODE:
qi = int(input())
pc = float(input())/100
qr = int(input())
i = 0

while 0<qi<8000:
	qi += qi*pc - qr
	i+=1
if qi<0:
	print("ZERO")
	print(i)
else:
	print("MAXIMO)
	print(i)
-- EXECUTION TIME:
0.199944
-- ERROR:
  File "/home/codebench/codes/1723/2507/main.py", line 13
    print("MAXIMO)
                 ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:04:49) 
-- CODE:
qi = int(input())
pc = float(input())/100

i = 0

while 0<qi<8000:
	qr = int(input())
	qi += qi*pc - qr
	i+=1
if qi<0:
	print("ZERO")
	print(i)
else:
	print("MAXIMO)
	print(i)
-- EXECUTION TIME:
0.212633
-- ERROR:
  File "/home/codebench/codes/1723/2507/main.py", line 14
    print("MAXIMO)
                 ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:04:52) 
-- CODE:
qi = int(input())
pc = float(input())/100

i = 0

while 0<qi<8000:
	qr = int(input())
	qi += qi*pc - qr
	i+=1
if qi<0:
	print("ZERO")
	print(i)
else:
	print("MAXIMO)
	print(i)
-- ERROR:
File "XXXX", line 14
    print("MAXIMO)
                 ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:05:02) 
-- CODE:
qi = int(input())
pc = float(input())/100

i = 0

while 0<qi<8000:
	qr = int(input())
	qi += qi*pc - qr
	i+=1
if qi<0:
	print("ZERO")
	print(i)
else:
	print("MAXIMO")
	print(i)
-- EXECUTION TIME:
0.128363
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
